--- a/style.css
+++ b/style.css
@@ -1,39 +1,17 @@
-span[lang="en"] {
-  color: green;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-
+p {
+  animation-duration: 3s;
+  animation-delay: 30s;
+  animation-name: glissement;
+  animation-iteration-count: infinite;
 }
+@keyframes glissement {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
 
-a {
-  color: blue;
-}
-
-/* Liens internes commençant avec "#" */
-a[href^="#"] {
-  background-color: gold;
-}
-
-/* Liens avec "example" n'importe où dans l'URL */
-a[href*="example"] {
-  background-color: silver;
-}
-
-/* Liens avec "insensitive" n'importe où dans l'URL,
-   quelle que soit la casse */
-a[href*="insensitive" i] {
-  color: cyan;
-}
-
-/* Liens avec "cAsE" n'importe où dans l'URL,
-   et avec cette casse donnée.*/
-a[href*="cAsE" s] {
-  color: pink;
-}
-
-/* Liens qui finissent ".org" */
-a[href$=".org"] {
-  color: red;
-}
-h1[class="article"]{
-  color: brown;
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
