--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 .card{
   background-color: whitesmoke;
   margin: 50px;
+  padding: 10px;
 }
 
 .title {
@@ -16,7 +17,12 @@
   font-weight: bold;
 }
 .p-title{
+  margin-top: 20px;
+  margin-bottom: 20px;
   font-weight: bolder;
   text-align: center;
 }
+.Frontend{
+  margin-left:30vw;
 
+}
