add align-content to element

--- a/style.css
+++ b/style.css
@@ -1,41 +1,13 @@
-*{
-  margin: 0;
-  padding: 0;
+.flex-start{
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  
 }
 
-.card{
-  background-color: whitesmoke;
-  margin: 50px;
-  padding: 10px;
-}
-
-.title {
-  text-align: center;
-  color:violet;
-  font-size: 35px;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-weight: bold;
-}
-.p-title{
-  margin-top: 20px;
-  margin-bottom: 20px;
-  font-weight: bolder;
-  text-align: center;
-}
-.Frontend{
-  margin-left:30vw;
-
-}
-
-.list_one {
- font-size: x-large;
-}
-
-.content_frontend{
-  align-content:flex-end;
-}
-.content{
-  width: 30vw;
-  flex-direction:column;
-  align-content: flex-start;
+.item{
+  background-color: #ef06a9;
+  width: 10vw;
+  height: 15vw;
+  margin: 10px;
 }
