--- a/style.css
+++ b/style.css
@@ -104,3 +104,12 @@ position: relative;
   font-size: 24px;
   font-family: "Arial", sans-serif;
 }
+
+/* nav */
+
+nav {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  justify-content: flex-end;
+}
