--- a/style.css
+++ b/style.css
@@ -122,14 +122,18 @@ nav {
 .item-icon{
   display: flex;
   justify-content: space-between;
+  margin-top: 10px;
+  margin-left: 20px;
 }
 .profile-nom{
-  margin-top: 25px;
+  margin-top: 14px;
   margin-left: 20px;
 }
 .profile{
-  width: 60px;
-  height: 60px;
+  margin-top: -6px;
+  margin-bottom: 3px;
+  width: 50px;
+  height: 50px;
   border-color: 20px solid #ef06a9;
   border-radius: 50px;
 
@@ -141,4 +145,8 @@ nav {
   color: #ef06a9;
   font-size: large;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.item-menu{
+  margin-top: 20px;
+
 }
