--- a/style.css
+++ b/style.css
@@ -126,15 +126,16 @@ nav {
   margin-left: 20px;
 }
 .profile-nom{
-  margin-top: 14px;
-  margin-left: 20px;
+  margin-top: 10px;
+  margin-left: 10px;
+  font-family:cursive;
 }
 .profile{
   margin-top: -6px;
   margin-bottom: 3px;
   width: 50px;
   height: 50px;
-  border-color: 20px solid #ef06a9;
+  border: 2px solid #ef06a9;
   border-radius: 50px;
 
 }
